--- a/src/app/covid/covid.component.html
+++ b/src/app/covid/covid.component.html
@@ -7,11 +7,16 @@
         </div>
         <div class="row d-flex justify-content-center my-4">
             <div class="col-auto col-10 text-main px-5">
-                by Dr. Smile | 5 May 2020
+                by Dr. Smile | 4 March 2020
             </div>
         </div>
         <div class="row d-flex justify-content-center">
-            <div class="col-auto col-10 text-body px-5">
+            <div class="col-11 col-md-10 col-lg-10 ">
+                <img src="../../assets/images/covid-19-image.png" alt="" class="image image-responsive">
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center mt-5">
+            <div class="col-11 col-md-10 col-lg-10 text-body">
                 <p>
                     Dr. Smile is happy to announce that, we are once again open for clinical appointments (fillings, crowns, implants, extractions, etc.)
                 </p>
