--- a/src/app/covid/covid.component.html
+++ b/src/app/covid/covid.component.html
@@ -2,12 +2,12 @@
 <section class="content6 cid-sEwlHHluPT" id="content6-1">   
     <div class="container-fluid p-0">
         <div class="row d-flex justify-content-center mt-3">
-            <div class="col-auto col-10 heading-main px-5" id="head">
+            <div class="col-auto col-10 heading-main" id="head">
                 Keeping You Safe During COVID-19
             </div>
         </div>
         <div class="row d-flex justify-content-center my-4">
-            <div class="col-auto col-10 text-main px-5">
+            <div class="col-auto col-10 text-main">
                 by Dr. Smile | 4 March 2020
             </div>
         </div>
@@ -88,8 +88,13 @@
                     On behalf of the entire Dr. Smile team, I would like to personally thank each and every one of you for trusting your dental care with us. We will get through these challenging times together. I look forward to continuing to provide you and your families with the best dental care.
                 </p>
                 <p>
-                    Dr. Abir Saha
+                    Dr. Abir Kumar Saha
                 </p>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center">
+            <div class="col-11 col-md-10 col-lg-10 ">
+                <img src="../../assets/images/fighting-virus-26097.jpg" alt="" class="image image-responsive">
             </div>
         </div>
     </div>
